# ageneers

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.sandbox  README.md  cli.py  docker-compose.yml  docker_section.md  output.md  pyproject.toml  task.example.json  test_parse.py  update_parser.py
ageneers-ui/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
app/: main.py
reports/: 02229aa3-b476-4e17-a0d2-beb5de1eae36.json  10b315d7-02ce-4a70-a9ab-7e6303e41f50.json  1f3cfb7b-9406-4874-a4dc-8c2f79764c6b.json  27afb5bf-b345-4107-a2e8-6a726b738c60.json  3a8060e3-0054-485f-b7fd-3e5e9f58f819.json  430207b9-1dfb-47dc-aa3d-1d28cc088e6a.json  48b922a4-61fc-4d1d-a075-b91d74f7e22f.json  6d3f517d-5c26-4d33-b0d2-7d45ccb9599e.json  6d90ff88-378c-41d3-8949-70e1947a1b0e.json  7cc8d87c-12b4-4cab-83b4-49fe0bb4fd6e.json  7f10c61d-c54f-465d-8dd9-baaecf18bfd9.json  955d2d2f-5749-40ab-84af-4743f7762cdf.json  a10c6a6a-843b-4f78-8f6e-ccf0f5fa54c3.json  b04a456a-706c-4d27-b26a-3149d721474e.json  b1292f33-760c-4fe8-a850-8a30d93b6ad3.json  b6e72116-7942-4530-84ab-2d091d9f8618.json  c63c13ec-b820-45db-82b2-3bdec970a690.json  c934368f-2492-446f-8e2c-7bb78c845dff.json  ce5b0339-09a5-49b5-999e-78023958dffe.json  cfef97b8-a01a-41ac-aedf-d8d4848d8738.json  d5ddf3bc-68f9-4b0e-a5ee-bcb59f716cf6.json  da29b699-cc8e-4293-8751-877e17346b09.json  e6a7db06-1202-49a1-85cf-98c1215cc3d2.json  ef5dc55a-a118-4db8-be03-888519e4347d.json  f203bad5-db87-4f23-b4a3-6b8a87cbc88a.json  f880c00d-c9fa-44d8-b0e6-703fef9c076c.json  (+1 more)
tests/: test_codegeneer.py  (+8 more)
(+38 files in other folders)
