[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project]
name = "ai-dev-agent"
version = "0.1.0"
description = "AI Development Agent — turns task descriptions into Pull Requests"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # --- Web framework ---
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",

    # --- Agent framework ---
    "langgraph>=0.2.0",
    "langchain>=0.2.0",
    "langchain-groq>=0.1.0",

    # --- AI / LLM ---
    "groq>=0.9.0",

    # --- Git / GitHub ---
    "gitpython>=3.1.43",
    "PyGithub>=2.3.0",

    # --- Validation & config ---
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",

    # --- Utilities ---
    "httpx>=0.27.0",
    "structlog>=24.2.0",
    "rich>=13.7.0",
    "toml>=0.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::pytest.PytestCollectionWarning"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true